spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_definition_of_decl_triggers_errors.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: x was already defined
  ┌─ testinput:4:9
  │
3 │     let x = 0;
  │         - previous definition
4 │     let x = 1;
  │         ^ x was defined previously
  │
  = Declared variables can only be defined once


